--- a/_tools/testem.mustache
+++ b/_tools/testem.mustache
@@ -3,11 +3,11 @@
 <head>
     <title>Test'em</title>
 
-    <link rel="stylesheet" href="/tools/jasmine.css">
+    <link rel="stylesheet" href="/_tools/jasmine.css">
 
-    <script src="/tools/jasmine.js"></script>
-    <script src="/tools/jasmine-html.js"></script>
-    <script src="/tools/jasmine-boot.js"></script>
+    <script src="/_tools/jasmine.js"></script>
+    <script src="/_tools/jasmine-html.js"></script>
+    <script src="/_tools/jasmine-boot.js"></script>
     <script src="/testem.js"></script>
 
     <script>
@@ -18,7 +18,7 @@
         ]
     </script>
 
-    <script src="/node_modules/steal/steal.js" main="tools/testem.bootstrap"></script>
+    <script src="/node_modules/steal/steal.js" main="_tools/testem.bootstrap"></script>
 
 </head>
 <body>
